# Smart_PDF_ChatBot_RAG_APP

./: .gitignore  Dummy File.docx  README.md  backend.py  dark_theme.css  light_theme.css  main.py  pyproject.toml  requirements.txt  run.py  test.ipynb  test_docker_qdrant.py
src/backend/: backend_api.py  doc_loader.py  prompt.py  rag_pipeline.py  retriever.py  session_manager.py
src/frontend/: api.py  main.py  state.py
