[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asttokens>=3.0.1",
    "fastapi[standard]>=0.136.3",
    "google-generativeai>=0.8.6",
    "huggingface-hub>=1.18.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.3.4",
    "langchain-anthropic>=1.4.4",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "numpy>=2.2.6",
    "openai>=2.41.0",
    "pandas>=2.3.3",
    "pypdf>=6.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "tiktoken>=0.13.0",
    "torchvision>=0.27.0",
    "transformers>=5.10.2",
    "youtube-transcript-api>=1.2.4",
]
